--- a/dashboard/src/assets/css/login.css
+++ b/dashboard/src/assets/css/login.css
@@ -1,11 +1,7 @@
-@media all and (min-width: 480px) {
+@media all {
     .Login {
-      padding: 60px 0;
-    }
-  
-    .Login form {
-      margin: 0 auto;
       max-width: 320px;
+      margin-top: 100px;
     }
   }
   
