--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -107,20 +107,45 @@ h1 .subtitle {
 .text-muted {
   color: #9A9A9A; }
 
+.background-muted {
+  background-color: #9A9A9A !important;
+}
 .text-primary, .text-primary:hover {
   color: #1D62F0 !important; }
+
+.background-primary {
+  background-color: #1D62F0 !important;
+}
 
 .text-info, .text-info:hover {
   color: #1DC7EA !important; }
 
+.background-info {
+  background-color: #1DC7EA !important;
+}
+
 .text-success, .text-success:hover {
   color: #87CB16 !important; }
+
+.background-success {
+  background-color: #87CB16 !important;
+}
 
 .text-warning, .text-warning:hover {
   color: #FF9500 !important; }
 
+.background-warning {
+  background-color: #FF9500 !important;
+}
+
 .text-danger, .text-danger:hover {
   color: #FF4A55 !important; }
+
+.background-danger {
+  background-color: #FF4A55 !important;
+}
+.text-line-through {
+  text-decoration: line-through;}
 
 /*     General overwrite     */
 body,
