details working with popover

--- a/dashboard/src/assets/sass/lbd/_typography.scss
+++ b/dashboard/src/assets/sass/lbd/_typography.scss
@@ -91,3 +91,7 @@ h1 .subtitle{
 .text-line-through {
     text-decoration: line-through;
 }
+
+.text-medium-dark-gray {
+    color: $medium-dark-gray;
+}
