--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -125,6 +125,9 @@ h1 .subtitle {
 .text-line-through {
   text-decoration: line-through; }
 
+.text-medium-dark-gray {
+  color: #AAAAAA; }
+
 /*     General overwrite     */
 body,
 .wrapper {
