Corrections and changes in interfaces #71

--- a/dashboard/src/assets/sass/lbd/_tables.scss
+++ b/dashboard/src/assets/sass/lbd/_tables.scss
@@ -31,8 +31,8 @@
         border-bottom-width: 1px;
         font-size: $font-size-small;
         text-transform: uppercase;
-        color: $dark-gray;
-        font-weight: $font-weight-normal;
+        color: $custom_dark-gray;
+        font-weight: $font-weight-semi;
         padding-bottom: 5px;
     }
 
