--- a/dashboard/src/assets/sass/lbd/_variables.scss
+++ b/dashboard/src/assets/sass/lbd/_variables.scss
@@ -20,6 +20,7 @@ $light-gray:                 #E3E3E3 !default;
 $medium-gray:                #DDDDDD !default;
 $medium-dark-gray:           #AAAAAA !default;
 $dark-gray:                  #9A9A9A !default;
+$custom-dark-gray:           #403f3f !default;
 
 $transparent-bg:             transparent !default;
 
