--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -986,8 +986,8 @@ body > .navbar-collapse[data-color="purple"]:after {
   border-bottom-width: 1px;
   font-size: 12px;
   text-transform: uppercase;
-  color: #9A9A9A;
-  font-weight: 400;
+  color: #403f3f;
+  font-weight: 500;
   padding-bottom: 5px; }
 
 .table .td-actions .btn {
@@ -1794,7 +1794,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   .card label {
     font-size: 14px;
     font-weight: 400;
-    color: #9A9A9A;
+    color: #403f3f;
     margin-bottom: 0px; }
     .card .category i,
     .card label i {
