--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -980,7 +980,10 @@ body > .navbar-collapse[data-color="purple"]:after {
   vertical-align: middle; }
 
 .table > tbody > tr > td {
-  font-size: 14px; }
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; }
 
 .table > thead > tr > th {
   border-bottom-width: 1px;
