--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -1797,7 +1797,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   .card label {
     font-size: 14px;
     font-weight: 400;
-    color: #403f3f;
+    color: #9A9A9A;
     margin-bottom: 0px; }
     .card .category i,
     .card label i {
