Statistics pointing and placeholder plot in sky (#82)
*  Corrections and changes in interfaces #71

* test layout statistics pointings #72

* Saving para dar git pull #72

* create statistics pointings - placeholder #72

* Statitics pointing and placeholder plot project in sky - (TNO - meeting) #72

* Update FilterPointings.jsx

--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -989,8 +989,8 @@ body > .navbar-collapse[data-color="purple"]:after {
   border-bottom-width: 1px;
   font-size: 12px;
   text-transform: uppercase;
-  color: #9A9A9A;
-  font-weight: 400;
+  color: #403f3f;
+  font-weight: 500;
   padding-bottom: 5px; }
 
 .table .td-actions .btn {
