--- a/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -54,7 +54,7 @@
             margin-right: 15px;
 
             img{
-                width: 40px;
+                width: 80px;
                 margin-left: -3px;
                 display: block;
                 margin-top: 2px;
@@ -62,19 +62,24 @@
         }
 
         a.logo-normal{
-            display: block;
+            display: inline-block;
+            margin-left: 120px;
+            margin-top: 10px;
         }
 
         .logo-img{
             width: 34px;
-            display: inline-block;
-            height: 34px;
+            display: block;
+            height: 20px;
             margin-left: -2px;
             margin-top: -2px;
             margin-right: 10px;
             border-radius: 30px;
             text-align: center;
         }
+        
+        // .float-left { float: left;}
+        // .float-right {float: right;}
     }
 
     .logo-tim{
@@ -164,9 +169,9 @@ body > .navbar-collapse{
             text-transform: uppercase;
             padding: $padding-small-vertical $padding-zero;
             display: block;
-            font-size: $font-size-large;
+            font-size: $font-size-large-especial;
             color: $white-color;
-            font-weight: $font-weight-normal;
+            font-weight: $font-weight-bold;
             line-height: 30px;
         }
     }
@@ -264,4 +269,8 @@ body > .navbar-collapse{
     -webkit-transition-timing-function: linear,linear;
     transition-timing-function: linear,linear;
     -webkit-overflow-scrolling: touch;
+}
+
+.margin-top {
+    margin-top: -65px;
 }
