log backend connection

--- a/dashboard/src/assets/sass/lbd/_variables.scss
+++ b/dashboard/src/assets/sass/lbd/_variables.scss
@@ -109,6 +109,8 @@ $font-size-small:              12px !default;
 $font-size-medium:             16px !default;
 $font-size-large:              18px !default;
 $font-size-large-navbar:       20px !default;
+$font-size-large-especial:     24px !default;
+
 
 $font-size-h1:                 52px !default;
 $font-size-h2:                 36px !default;
