--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -242,16 +242,18 @@ input:focus {
       width: 30px;
       margin-right: 15px; }
       .sidebar .logo a.logo-mini img {
-        width: 40px;
+        width: 80px;
         margin-left: -3px;
         display: block;
         margin-top: 2px; }
     .sidebar .logo a.logo-normal {
-      display: block; }
+      display: inline-block;
+      margin-left: 120px;
+      margin-top: 10px; }
     .sidebar .logo .logo-img {
       width: 34px;
-      display: inline-block;
-      height: 34px;
+      display: block;
+      height: 20px;
       margin-left: -2px;
       margin-top: -2px;
       margin-right: 10px;
@@ -320,9 +322,9 @@ body > .navbar-collapse .logo {
     text-transform: uppercase;
     padding: 5px 0px;
     display: block;
-    font-size: 18px;
+    font-size: 24px;
     color: #FFFFFF;
-    font-weight: 400;
+    font-weight: 600;
     line-height: 30px; }
 
 .sidebar .logo-tim,
@@ -462,6 +464,9 @@ body > .navbar-collapse[data-color="purple"]:after {
   -webkit-transition-timing-function: linear,linear;
   transition-timing-function: linear,linear;
   -webkit-overflow-scrolling: touch; }
+
+.margin-top {
+  margin-top: -65px; }
 
 .btn {
   border-width: 2px;
@@ -3029,3 +3034,6 @@ body > .navbar-collapse[data-color="purple"]:after {
     overflow-y: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     -webkit-overflow-scrolling: touch; } }
+
+.legend-chart {
+  bottom: .10em !important; }
