Created the stepStats, listStats, and donutStats components #100

--- a/dashboard/src/assets/sass/lbd/_variables.scss
+++ b/dashboard/src/assets/sass/lbd/_variables.scss
@@ -264,3 +264,9 @@ $azure-navbar:              lighten($new-blue, 15%);
 $green-navbar:              lighten($new-green, 10%);
 $orange-navbar:             lighten($new-orange, 10%);
 $red-navbar:                lighten($new-red, 10%);
+
+
+$h-3-progressbar:        3px;
+$h-6-progressbar:        6px;
+$h-9-progressbar:        9px;
+$h-12-progressbar:       12px;
