--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.scss
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.scss
@@ -39,4 +39,8 @@
 @import "lbd/responsive";
 
 // TNO edition
-@import "lbd/defaultTNO";
+@import "lbd/progressbar";
+@import "lbd/step-stats";
+
+
+
