--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -3035,5 +3035,63 @@ body > .navbar-collapse[data-color="purple"]:after {
     -ms-overflow-style: -ms-autohiding-scrollbar;
     -webkit-overflow-scrolling: touch; } }
 
-.legend-chart {
-  bottom: .10em !important; }
+@-webkit-keyframes progress-bar-stripes {
+  from {
+    background-position: 40px 0; }
+  to {
+    background-position: 0 0; } }
+
+@keyframes progress-bar-stripes {
+  from {
+    background-position: 40px 0; }
+  to {
+    background-position: 0 0; } }
+
+.progress {
+  overflow: hidden;
+  height: 6px;
+  margin-bottom: 19px;
+  background-color: #5c5c5c;
+  border-radius: 2px;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1); }
+
+.progress-bar {
+  float: left;
+  width: 0;
+  height: 100%;
+  font-size: 10px;
+  line-height: 19px;
+  color: #fff;
+  text-align: center;
+  background-color: #2c97de;
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  -webkit-transition: width .6s ease;
+  transition: width .6s ease; }
+
+.progress-bar.active, .progress.active .progress-bar {
+  -webkit-animation: progress-bar-stripes 2s linear infinite;
+  animation: progress-bar-stripes 2s linear infinite; }
+
+.progress-bar-success {
+  background-color: #84b547; }
+
+.progress-bar-info {
+  background-color: #2dbda8; }
+
+.progress-bar-warning {
+  background-color: #e76d3b; }
+
+.progress-bar-danger {
+  background-color: #cc3e4a; }
+
+.step-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+  .step-list > li {
+    color: #AAAAAA;
+    font-size: 12px; }
+  .step-list > li.number {
+    margin-left: 8px;
+    color: rgba(30, 30, 30, 0.97);
+    font-size: 18px; }
