--- a/dashboard/src/assets/sass/lbd/_variables.scss
+++ b/dashboard/src/assets/sass/lbd/_variables.scss
@@ -252,6 +252,13 @@ $new-dark-blue:       #1b8dff;
 $new-black:           #5e5e5e;
 
 
+$plot-roxo:           #62388C;
+$plot-verde:          #28CA71;
+$plot-azul:           #75BDEE;
+$plot-amarelo:        #F6C54F;
+$plot-alaranjado:     #D34A39;
+
+
 $topbar-x:             topbar-x !default;
 $topbar-back:          topbar-back !default;
 $bottombar-x:          bottombar-x !default;
