--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.scss
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.scss
@@ -41,6 +41,11 @@
 // TNO edition
 @import "lbd/progressbar";
 @import "lbd/step-stats";
+@import "lbd/badge";
+@import "lbd/plot";
+@import "lbd/miniCardStats";
+
+
 
 
 
