--- a/dashboard/src/assets/sass/lbd/_progressbar.scss
+++ b/dashboard/src/assets/sass/lbd/_progressbar.scss
@@ -28,14 +28,15 @@
     border-radius: 2px;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   }
-  
+
+ 
   .progress-bar {
     float: left;
     width: 0;
     height: 100%;
-    font-size: 10px;
-    line-height: 19px;
-    color: #fff;
+    font-size: 8px;
+    line-height: 10px;
+    color: #000;
     text-align: center;
     background-color: #2c97de;
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
@@ -49,7 +50,7 @@
   }
   
   .progress-bar-success {
-    background-color: #84b547;
+    background-color: #28CA71; //#84b547;
   }
 
   
@@ -64,5 +65,5 @@
   
 
   .progress-bar-danger {
-    background-color: #cc3e4a;
+    background-color: #D34A39// #cc3e4a;
   }
