modifications in dashboard and new components for the stats #105

--- a/dashboard/src/assets/sass/lbd/_badge.scss
+++ b/dashboard/src/assets/sass/lbd/_badge.scss
@@ -105,7 +105,7 @@
       color: #00A3E3;
       border-color: #00A3E3;
     }
-    &.label-gray-darker {
+    &.label-running {
       color: #262626;
       border-color: #262626;
     }
