--- a/dashboard/src/assets/sass/lbd/_miniCardStats.scss
+++ b/dashboard/src/assets/sass/lbd/_miniCardStats.scss
@@ -1,5 +1,24 @@
 .mini-card-stats {
     width: 300px;
+    height: 110px;
+
+}
+.plot {
+    margin-top: -36px;
+}
+.title-statistics {
+    font-size: 1.3rem;
+    color: #ffffff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+
+}
+.number-statistics {
+    font-size: 2.2rem;
+    color: #ffffff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+
 }
 .blue {
         background-color: #75BDEE;
@@ -10,4 +29,8 @@
 
 .orange {
         background-color: #D34A39;
-    }
+}
+.green {
+        background-color: #28CA71;
+}
+
