--- a/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -241,7 +241,7 @@ body > .navbar-collapse{
 
 
 .main-panel{
-    background: rgba(203,203,210,.15);
+    background:#898989 !important;//rgba(203,203,210,.15);
     position: relative;
     float: right;
     width: $sidebar-width;
