--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -443,7 +443,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   background-size: 150% 150%; }
 
 .main-panel {
-  background: rgba(203, 203, 210, 0.15);
+  background: #4E5357 !important;
   position: relative;
   float: right;
   width: calc(100% - 260px); }
@@ -3059,9 +3059,9 @@ body > .navbar-collapse[data-color="purple"]:after {
   float: left;
   width: 0;
   height: 100%;
-  font-size: 10px;
-  line-height: 19px;
-  color: #fff;
+  font-size: 8px;
+  line-height: 10px;
+  color: #000;
   text-align: center;
   background-color: #2c97de;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
@@ -3073,7 +3073,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   animation: progress-bar-stripes 2s linear infinite; }
 
 .progress-bar-success {
-  background-color: #84b547; }
+  background-color: #28CA71; }
 
 .progress-bar-info {
   background-color: #2dbda8; }
@@ -3082,7 +3082,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   background-color: #e76d3b; }
 
 .progress-bar-danger {
-  background-color: #cc3e4a; }
+  background-color: #D34A39; }
 
 .step-list {
   list-style-type: none;
@@ -3095,3 +3095,160 @@ body > .navbar-collapse[data-color="purple"]:after {
     margin-left: 8px;
     color: rgba(30, 30, 30, 0.97);
     font-size: 18px; }
+
+.step-text-right {
+  float: right; }
+
+.step-text-left {
+  float: left; }
+
+.badge {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 10px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 1;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-align: center;
+  background-color: #444;
+  border-radius: 10px; }
+
+.badge:empty {
+  display: none; }
+
+.label {
+  display: inline;
+  padding: .2em .6em .3em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em; }
+
+.label.label-outline {
+  background: 0 0;
+  border: 1px solid; }
+  .label.label-outline.label-primary {
+    color: #2c97de;
+    border-color: #2c97de; }
+  .label.label-outline.label-success {
+    color: #84b547;
+    border-color: #84b547; }
+  .label.label-outline.label-info {
+    color: #2dbda8;
+    border-color: #2dbda8; }
+  .label.label-outline.label-warning {
+    color: #e76d3b;
+    border-color: #e76d3b; }
+  .label.label-outline.label-danger {
+    color: #cc3e4a;
+    border-color: #cc3e4a; }
+  .label.label-outline.label-cerulean {
+    color: #00A3E3;
+    border-color: #00A3E3; }
+  .label.label-outline.label-curious-blue {
+    color: #2986c7;
+    border-color: #2986c7; }
+  .label.label-outline.label-endaveour {
+    color: #0055a3;
+    border-color: #0055a3; }
+  .label.label-outline.label-minsk {
+    color: #362d88;
+    border-color: #362d88; }
+  .label.label-outline.label-eminence {
+    color: #742787;
+    border-color: #742787; }
+  .label.label-outline.label-violet-eggplant {
+    color: #aa1985;
+    border-color: #aa1985; }
+  .label.label-outline.label-mint-green {
+    color: #72ff96;
+    border-color: #72ff96; }
+  .label.label-outline.label-aquamarine {
+    color: #62ffe0;
+    border-color: #62ffe0; }
+  .label.label-outline.label-malibu {
+    color: #6abfff;
+    border-color: #6abfff; }
+  .label.label-outline.label-dodger-blue {
+    color: #5e6cff;
+    border-color: #5e6cff; }
+  .label.label-outline.label-heliotrope {
+    color: #a26bff;
+    border-color: #a26bff; }
+  .label.label-outline.label-perfume {
+    color: #f57ffe;
+    border-color: #f57ffe; }
+  .label.label-outline.label-brand-cerulean {
+    color: #00A3E3;
+    border-color: #00A3E3; }
+  .label.label-outline.label-running {
+    color: #262626;
+    border-color: #262626; }
+  .label.label-outline.label-gray-dark {
+    color: #2d2d2d;
+    border-color: #2d2d2d; }
+  .label.label-outline.label-gray {
+    color: #383838;
+    border-color: #383838; }
+  .label.label-outline.label-gray-light {
+    color: #444;
+    border-color: #444; }
+  .label.label-outline.label-gray-lighter {
+    color: #5c5c5c;
+    border-color: #5c5c5c; }
+  .label.label-outline.label-white {
+    color: #fff;
+    border-color: #fff; }
+
+.plot-roxo {
+  color: #62388C; }
+
+.plot-verde {
+  color: #28CA71; }
+
+.plot-azul {
+  color: #75BDEE !important; }
+
+.plot-amarelo {
+  color: #F6C54F; }
+
+.plot-alaranjado {
+  color: #D34A39; }
+
+.mini-card-stats {
+  width: 300px;
+  height: 110px; }
+
+.plot {
+  margin-top: -36px; }
+
+.title-statistics {
+  font-size: 1.3rem;
+  color: #ffffff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400; }
+
+.number-statistics {
+  font-size: 2.2rem;
+  color: #ffffff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500; }
+
+.blue {
+  background-color: #75BDEE; }
+
+.yellow {
+  background-color: #F6C54F; }
+
+.orange {
+  background-color: #D34A39; }
+
+.green {
+  background-color: #28CA71; }
