--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -443,7 +443,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   background-size: 150% 150%; }
 
 .main-panel {
-  background: #4E5357 !important;
+  background: #898989 !important;
   position: relative;
   float: right;
   width: calc(100% - 260px); }
@@ -467,6 +467,10 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .margin-top {
   margin-top: -65px; }
+
+img {
+  max-width: 100%;
+  height: 100%; }
 
 .btn {
   border-width: 2px;
@@ -1755,7 +1759,7 @@ body > .navbar-collapse[data-color="purple"]:after {
 .card {
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.1);
-  background-color: #FFFFFF;
+  background-color: #A2A3A4 !important;
   margin-bottom: 30px; }
   .card .image {
     width: 100%;
