--- a/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -241,7 +241,7 @@ body > .navbar-collapse{
 
 
 .main-panel{
-    background:#898989 !important;//rgba(203,203,210,.15);
+    background:rgba(111, 109, 109, 0.17);//rgba(203,203,210,.15);
     position: relative;
     float: right;
     width: $sidebar-width;
@@ -273,9 +273,4 @@ body > .navbar-collapse{
 
 .margin-top {
     margin-top: -65px;
-}
-
-img{
-    max-width:100%;
-    height:100%;
 }
