--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -443,7 +443,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   background-size: 150% 150%; }
 
 .main-panel {
-  background: #898989 !important;
+  background: rgba(111, 109, 109, 0.17);
   position: relative;
   float: right;
   width: calc(100% - 260px); }
@@ -467,10 +467,6 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .margin-top {
   margin-top: -65px; }
-
-img {
-  max-width: 100%;
-  height: 100%; }
 
 .btn {
   border-width: 2px;
@@ -1759,7 +1755,7 @@ img {
 .card {
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.1);
-  background-color: #A2A3A4 !important;
+  background-color: #FFFFFF;
   margin-bottom: 30px; }
   .card .image {
     width: 100%;
