dashboard new panel #105

--- a/dashboard/src/assets/sass/lbd/_miniCardStats.scss
+++ b/dashboard/src/assets/sass/lbd/_miniCardStats.scss
@@ -1,7 +1,8 @@
 .mini-card-stats {
-    width: 300px;
+    width: 400px;
+    margin-left: 50px;
     height: 110px;
-    border: none;
+    border: 2px solid #c6c6c6;
 
 }
 .plot {
