--- a/dashboard/src/assets/sass/lbd/_panel-costumize.scss
+++ b/dashboard/src/assets/sass/lbd/_panel-costumize.scss
@@ -1,6 +1,26 @@
-[className*="costumize"] {
-    background:#566169 !important;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 400;
+.panel-content {
+ min-width: 500px;
+ min-height: none;
+ background: #ffffff !important;  
+ border: 1.5px solid $panel-costumize-default;
+ border-radius: 1px;
+
+ .header {
+     border-bottom: 2px solid $panel-costumize-default;
+     background-color: $panel-costumize-default;
+ }
+
+ .title {
+     padding: 8px 16px;
+     font-size: 14px; 
+     color: #fff;
+     font-weight:bold;
+     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+ }
+}
+
+
+.panel-hr {
+    background-color: $panel-costumize-hr;
+    height: 1px;
 }
