--- a/dashboard/src/assets/sass/lbd/_variables.scss
+++ b/dashboard/src/assets/sass/lbd/_variables.scss
@@ -277,3 +277,6 @@ $h-3-progressbar:        3px;
 $h-6-progressbar:        6px;
 $h-9-progressbar:        9px;
 $h-12-progressbar:       12px;
+
+$panel-costumize-default: #575555;
+$panel-costumize-hr: #b8b4b4;
