--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -443,13 +443,13 @@ body > .navbar-collapse[data-color="purple"]:after {
   background-size: 150% 150%; }
 
 .main-panel {
-  background: rgba(111, 109, 109, 0.17);
+  background: #eeeded !important;
   position: relative;
   float: right;
   width: calc(100% - 260px); }
   .main-panel > .content {
     padding: 30px 15px;
-    min-height: calc(100% - 123px); }
+    min-height: 830px; }
   .main-panel > .footer {
     border-top: 1px solid #e7e7e7; }
   .main-panel .navbar {
@@ -1755,7 +1755,7 @@ body > .navbar-collapse[data-color="purple"]:after {
 .card {
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.1);
-  background-color: #FFFFFF;
+  background-color: #FFFFFF !important;
   margin-bottom: 30px; }
   .card .image {
     width: 100%;
@@ -3089,18 +3089,50 @@ body > .navbar-collapse[data-color="purple"]:after {
   margin: 0;
   padding: 0; }
   .step-list > li {
-    color: #AAAAAA;
-    font-size: 12px; }
+    color: rgba(0, 0, 0, 0.8) !important;
+    font-size: 12px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
   .step-list > li.number {
-    margin-left: 8px;
+    margin-left: 18px;
     color: rgba(30, 30, 30, 0.97);
-    font-size: 18px; }
+    font-size: 16px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
+
+.step-title {
+  color: black !important;
+  font-size: 16px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
+
+.step-icon {
+  font-size: 1.8em;
+  color: rgba(0, 0, 0, 0.5) !important;
+  line-height: 1px; }
+
+.step-format {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+  .step-format > li a {
+    color: rgba(0, 0, 0, 0.5) !important;
+    font-size: 14px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 300;
+    margin-left: 10px; }
 
 .step-text-right {
   float: right; }
 
 .step-text-left {
   float: left; }
+
+.false {
+  background-color: none;
+  border: none; }
+
+.true {
+  background-color: none;
+  border: 1px solid #c6c6c6;
+  border-radius: 0px; }
 
 .badge {
   display: inline-block;
@@ -3223,8 +3255,10 @@ body > .navbar-collapse[data-color="purple"]:after {
   color: #D34A39; }
 
 .mini-card-stats {
-  width: 300px;
-  height: 110px; }
+  width: 400px;
+  margin-left: 50px;
+  height: 110px;
+  border: 2px solid #c6c6c6; }
 
 .plot {
   margin-top: -36px; }
@@ -3252,3 +3286,23 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .green {
   background-color: #28CA71; }
+
+.panel-content {
+  min-width: 500px;
+  min-height: none;
+  background: #ffffff !important;
+  border: 1.5px solid #575555;
+  border-radius: 1px; }
+  .panel-content .header {
+    border-bottom: 2px solid #575555;
+    background-color: #575555; }
+  .panel-content .title {
+    padding: 8px 16px;
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
+
+.panel-hr {
+  background-color: #b8b4b4;
+  height: 1px; }
