--- a/dashboard/src/assets/sass/lbd/_cards.scss
+++ b/dashboard/src/assets/sass/lbd/_cards.scss
@@ -1,7 +1,7 @@
 .card{
     border-radius: $border-radius-base;
     box-shadow: 0 1px 2px rgba(0,0,0,.05),0 0 0 1px rgba(63,63,68,.1);
-    background-color:#FFFFFF;
+    background-color:#FFFFFF !important; // #FFFFFF;
     margin-bottom: 30px;
 
     .image{
