--- a/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -241,14 +241,14 @@ body > .navbar-collapse{
 
 
 .main-panel{
-    background:rgba(111, 109, 109, 0.17);//rgba(203,203,210,.15);
+    background:#eeeded !important;//rgba(203,203,210,.15);
     position: relative;
     float: right;
     width: $sidebar-width;
 
     > .content{
         padding: 30px 15px;
-        min-height: calc(100% - 123px);
+        min-height: 830px;//calc(100% - 123px);
     }
 
     > .footer{
@@ -274,3 +274,4 @@ body > .navbar-collapse{
 .margin-top {
     margin-top: -65px;
 }
+
