--- a/dashboard/src/assets/sass/lbd/_progressbar.scss
+++ b/dashboard/src/assets/sass/lbd/_progressbar.scss
@@ -67,3 +67,7 @@
   .progress-bar-danger {
     background-color: #D34A39// #cc3e4a;
   }
+
+  .progress-bar-muted {
+    background-color: $muted-color
+  }
