--- a/dashboard/src/assets/sass/lbd/_variables.scss
+++ b/dashboard/src/assets/sass/lbd/_variables.scss
@@ -49,6 +49,7 @@ $danger-color:               #FF4A55 !default;
 $danger-bg:                  #FF4A55 !default;
 $danger-states-color:        #EE2D20 !default;
 
+$muted-color:                #9A9A9A !default;
 
 
 $link-disabled-color:        #666666 !default;
