--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -105,7 +105,7 @@ h1 .subtitle {
   margin: 0 0 30px; }
 
 .text-muted {
-  color: #9A9A9A; }
+  color: #9A9A9A !important; }
 
 .text-primary, .text-primary:hover {
   color: #1D62F0 !important; }
@@ -3084,23 +3084,26 @@ body > .navbar-collapse[data-color="purple"]:after {
 .progress-bar-danger {
   background-color: #D34A39; }
 
+.progress-bar-muted {
+  background-color: #9A9A9A; }
+
 .step-list {
   list-style-type: none;
   margin: 0;
   padding: 0; }
   .step-list > li {
     color: rgba(0, 0, 0, 0.8) !important;
-    font-size: 12px;
+    font-size: 11px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
   .step-list > li.number {
-    margin-left: 18px;
+    margin-left: 11px;
     color: rgba(30, 30, 30, 0.97);
     font-size: 16px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
 
 .step-title {
   color: black !important;
-  font-size: 16px;
+  font-size: 12px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
 
 .step-icon {
@@ -3114,7 +3117,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   padding: 0; }
   .step-format > li a {
     color: rgba(0, 0, 0, 0.5) !important;
-    font-size: 14px;
+    font-size: 12px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 300;
     margin-left: 10px; }
@@ -3255,8 +3258,6 @@ body > .navbar-collapse[data-color="purple"]:after {
   color: #D34A39; }
 
 .mini-card-stats {
-  width: 400px;
-  margin-left: 50px;
   height: 110px;
   border: 2px solid #c6c6c6; }
 
@@ -3276,7 +3277,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   font-weight: 500; }
 
 .blue {
-  background-color: #75BDEE; }
+  background-color: #1DC7EA; }
 
 .yellow {
   background-color: #F6C54F; }
@@ -3288,7 +3289,6 @@ body > .navbar-collapse[data-color="purple"]:after {
   background-color: #28CA71; }
 
 .panel-content {
-  min-width: 500px;
   min-height: none;
   background: #ffffff !important;
   border: 1.5px solid #575555;
