--- a/dashboard/src/assets/sass/lbd/_miniCardStats.scss
+++ b/dashboard/src/assets/sass/lbd/_miniCardStats.scss
@@ -34,3 +34,10 @@
         background-color: #28CA71;
 }
 
+// criar arquivo
+.ex-mini {
+    font-size: .8em !important;   
+   .icon {
+    font-size: .8em !important;
+   }
+}   
