--- a/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/dashboard/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -275,3 +275,9 @@ body > .navbar-collapse{
     margin-top: -65px;
 }
 
+.wrap {
+        border-radius: 0px !important;
+    }
+.none {
+         border: none !important;
+    }
