--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.scss
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.scss
@@ -41,10 +41,11 @@
 // TNO edition
 @import "lbd/progressbar";
 @import "lbd/step-stats";
-@import "lbd/badge";
+@import "lbd/listStats";
 @import "lbd/plot";
 @import "lbd/miniCardStats";
 @import "lbd/panel-costumize";
+@import "lbd/cardContent";
 
 
 
