--- a/dashboard/src/assets/sass/lbd/_variables.scss
+++ b/dashboard/src/assets/sass/lbd/_variables.scss
@@ -281,3 +281,6 @@ $h-12-progressbar:       12px;
 
 $panel-costumize-default: #717172; //#575555;
 $panel-costumize-hr: #b8b4b4;
+
+
+$font-family-lato: 'Lato,'Helvetica Neue',Arial,Helvetica,sans-serif';
