--- a/dashboard/src/assets/sass/lbd/_cardContent.scss
+++ b/dashboard/src/assets/sass/lbd/_cardContent.scss
@@ -10,11 +10,11 @@
         .content-title {
          padding-left: 4px;
          margin: 5px 5px;
-         font-size: 12px; 
+         font-size: 14px; 
          color: $panel-costumize-default;
          font-weight:bold;
-         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-         text-transform: uppercase;
+         font-family: $font-family-lato;
+         //text-transform: uppercase;
          
         }
     
@@ -24,7 +24,7 @@
          font-size: 10px; 
          color: $panel-costumize-default;
          font-weight:500;
-         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+         font-family: $font-family-lato;
          margin: 0;
          
         }
@@ -39,4 +39,3 @@
     .linha-vertical {
         border-right: 1px solid #c6c6c6 !important;/* Adiciona borda esquerda na div como ser fosse uma linha.*/
       }
-
