--- a/dashboard/src/assets/sass/lbd/_step-stats.scss
+++ b/dashboard/src/assets/sass/lbd/_step-stats.scss
@@ -6,12 +6,13 @@
     
     > li {
         color: rgba(0,0,0,0.8) !important;
-        font-size: 11px;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-size: 14px;
+        font-family:  $font-family-lato;
     }
 
     > li.number {
-        margin-left: 11px;
+        margin-left: 20px;
+        margin-top: 2px;
         color: $black-bg;
         font-size: $font-size-medium;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
