--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -3099,10 +3099,11 @@ body > .navbar-collapse[data-color="purple"]:after {
   padding: 0; }
   .step-list > li {
     color: rgba(0, 0, 0, 0.8) !important;
-    font-size: 11px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
+    font-size: 14px;
+    font-family: "Lato," Helvetica Neue ",Arial,Helvetica,sans-serif"; }
   .step-list > li.number {
-    margin-left: 11px;
+    margin-left: 20px;
+    margin-top: 2px;
     color: rgba(30, 30, 30, 0.97);
     font-size: 16px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
@@ -3265,6 +3266,17 @@ body > .navbar-collapse[data-color="purple"]:after {
   padding: 5px;
   text-align: left; }
 
+.list-text {
+  font-family: "Lato," Helvetica Neue ",Arial,Helvetica,sans-serif";
+  font-weight: 400;
+  color: #717172; }
+
+.list-value {
+  font-family: "Lato," Helvetica Neue ",Arial,Helvetica,sans-serif";
+  font-weight: bold !important;
+  font-size: 16px !important;
+  color: #717172; }
+
 .icon {
   font-size: .6em !important; }
 
@@ -3284,8 +3296,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   color: #D34A39; }
 
 .mini-card-stats {
-  height: 110px;
-  border: 2px solid #c6c6c6; }
+  height: 110px; }
 
 .plot {
   margin-top: -36px; }
@@ -3323,18 +3334,18 @@ body > .navbar-collapse[data-color="purple"]:after {
     border-bottom: 2px solid #717172;
     background-color: #717172; }
   .panel-content .title {
-    padding: 2px 14px;
-    font-size: 14px;
+    line-height: 20px;
+    padding: 4px 14px;
+    font-size: 16px;
     color: #fff;
-    font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-transform: uppercase; }
+    font-weight: 600;
+    font-family: "Lato," Helvetica Neue ",Arial,Helvetica,sans-serif"; }
   .panel-content .subTitle {
     padding: 4px 14px;
     font-size: 14px;
     color: #717172;
     font-weight: 500;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Lato," Helvetica Neue ",Arial,Helvetica,sans-serif";
     margin-bottom: 0px; }
 
 .none > .ui-card-body {
@@ -3367,18 +3378,17 @@ body > .navbar-collapse[data-color="purple"]:after {
   .content-main .content-title {
     padding-left: 4px;
     margin: 5px 5px;
-    font-size: 12px;
+    font-size: 14px;
     color: #717172;
     font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-transform: uppercase; }
+    font-family: "Lato," Helvetica Neue ",Arial,Helvetica,sans-serif"; }
   .content-main .content-subtitle {
     padding-left: 4px;
     margin: 5px 5px !important;
     font-size: 10px;
     color: #717172;
     font-weight: 500;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Lato," Helvetica Neue ",Arial,Helvetica,sans-serif";
     margin: 0; }
   .content-main .content-body {
     background-color: inherit;
@@ -3387,3 +3397,68 @@ body > .navbar-collapse[data-color="purple"]:after {
 .linha-vertical {
   border-right: 1px solid #c6c6c6 !important;
   /* Adiciona borda esquerda na div como ser fosse uma linha.*/ }
+
+@media only screen and (max-width: 780px) {
+  .size-plot {
+    margin: 0 5px; }
+  .size-plot > .recharts-wrapper > .recharts-surface {
+    width: 300px !important;
+    margin: 0; }
+  .responsive-image {
+    width: 280px;
+    height: 180px;
+    margin: 0px 5px;
+    padding: 0px; }
+    .responsive-image img {
+      width: inherit;
+      height: inherit; } }
+
+@media only screen and (min-width: 640px) {
+  .size-plot {
+    margin: 0; }
+  .size-plot > .recharts-wrapper > .recharts-surface {
+    width: 300px !important;
+    height: 200px !important; }
+  .size-plot > .recharts-wrapper {
+    width: inherit; }
+  .responsive-image {
+    width: 550px;
+    height: 450px;
+    margin: 0px 80px;
+    padding: 0px; }
+    .responsive-image img {
+      width: inherit;
+      height: inherit; } }
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .size-plot {
+    margin: 0 160px; }
+  .size-plot > .recharts-wrapper > .recharts-surface {
+    width: 300px !important;
+    height: 200px !important; }
+  .size-plot > .recharts-wrapper {
+    width: inherit; }
+  .responsive-image {
+    width: 400px;
+    height: 300px;
+    margin: 0px 145px;
+    padding: 0px; }
+    .responsive-image img {
+      width: inherit;
+      height: inherit; } }
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .size-plot {
+    margin: 0 45px; }
+  .size-plot > .recharts-wrapper {
+    width: inherit; }
+  .responsive-image {
+    width: 450px;
+    height: 350px;
+    margin: 0px 50px;
+    padding: 0px; }
+    .responsive-image img {
+      width: inherit;
+      height: inherit; } }
