--- a/dashboard/src/assets/sass/lbd/_cardContent.scss
+++ b/dashboard/src/assets/sass/lbd/_cardContent.scss
@@ -1,7 +1,7 @@
 .content-main {
     //  min-width: 500px;
      min-height: 20%;
-     background: #ffffff !important;  
+     background: none;  
      border-radius: 1px;
      margin: 8px 0px 8px 5px;
         .content-header {
