missing some image problems and changing layout colors #118

--- a/dashboard/src/assets/sass/lbd/_buttons.scss
+++ b/dashboard/src/assets/sass/lbd/_buttons.scss
@@ -106,3 +106,20 @@
     margin-top: -1px;
     right: 8px;
 }
+
+.button-TNO {
+    padding: 5px 25px;
+    border-radius: 1px;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none !important;
+    background: #3CB1C6 !important;
+}
+
+.btn-TNO-color  {
+    background: #3CB1C6 !important;
+    border: none !important;
+    width: 100px   !important;
+    border-radius: 1px;
+
+}
