--- a/dashboard/src/assets/sass/lbd/_flexbox.scss
+++ b/dashboard/src/assets/sass/lbd/_flexbox.scss
@@ -5,7 +5,7 @@
 }
 .flex-container {
     width: 100%;
-    margin: 0px auto;
+    margin: 0;
 	display: flex;
 }
 .flex-wrap {
@@ -41,7 +41,7 @@
 
 // item
 
-.item {
+.flex-item {
     margin: 10px 15px !important;
 }
 
